# plugify-module-cpp

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_ru.md  plugify-module-cpp.json  plugify-module-cpp.pmodule.in
.github/: release-please-config.json
.github/workflows/: cleanup.yml  cmake-multiple-platform.yml
conda/: bld.bat  build.sh  meta.yaml.example
conda-recipe/plugify-module-cpp/: bld.bat  meta.yaml.example  meta.yaml.in
generator/: 1.txt  README.md  clang_doc_parser.py  converter.py  generator.py  parser.py  run_generator.bat  run_generator.sh
generator/parser/: README.md  parser.py  parser_deprecated.py
include/plg/: api.hpp  formatter.hpp  plugin.hpp  string.hpp
include/plugify/: cpp_plugin.hpp
include/plugify/api/: plugify_api.hpp
parser/: parser.py  parser_deprecated.py
src/: module.cpp  module.h  module.hpp
sym/: exported_symbols.lds  version_script.lds
test/cross_call_master/: CMakeLists.txt  CMakePresets.json  cross_call_master.pplugin  plugin.cpp  simple_tests.cpp  simple_tests.hpp
test/cross_call_master/cmake/: compat_format.cmake
test/cross_call_master/output/: cross_call_master.d.ts
test/cross_call_master/output/pps/: cross_call_master.cs  cross_call_master.hpp  cross_call_master.pyi
test/cross_call_master/plugify/: cpp_plugin.hpp  format.hpp  string.h
test/cross_call_master/plugify/api/: plugify_api.hpp
test/cross_call_master/pps/: cross_call_worker.h  cross_call_worker.hpp
test/cross_call_worker/: .gitignore  CMakeLists.txt  cross_call_worker.pplugin  plugin.cpp
test/cross_call_worker/cmake/: CompatFormat.cmake
test/cross_call_worker/plugify/: cpp_plugin.h  cpp_plugin.hpp  string.h
test/cross_call_worker/pps/: cross_call_master.h  cross_call_master.hpp
test/example_plugin/: CMakeLists.txt  example_plugin.pplugin  plugin.cpp
test/example_plugin/plg/: api.hpp
test/example_plugin/plugify/: cpp_plugin.h
tools/generator/: generator.py
